Refactor RAG service retrieval logic and enhance metadata handling
- Replaced QuestionAnswerAdvisor with MetadataAwareRetrievalService in RagServiceTest.
- Introduced HybridDocumentRanker for improved document ranking based on multiple criteria.
- Added MetadataAwareRetrievalService to orchestrate retrieval with metadata extraction and ranking.
- Implemented QueryMetadataExtractor to extract structured metadata from queries.
- Created RetrievalContext and RetrievalResult classes for structured query handling and results.
- Enhanced governance checks in MetadataAwareRetrievalService to filter out drafts and pending articles.
- Updated tests for RoutingService and RuleEvaluationService to use Collections for empty lists.
- Added new DTO AiDecisionContextDTO for decision context handling.
- Introduced aiConfidence field in TicketResponse and updated TicketService to set this value.
- Added comprehensive tests for MetadataAwareRetrievalService to validate retrieval logic and ranking.